fixed footer
footer font size too small

--- a/index.css
+++ b/index.css
@@ -347,7 +347,7 @@ footer a:hover {
 }
 @media (min-width:800px) {
     .footer a{
-        font-size: 2vw;
+        font-size: 3vw;
     }
     footer{
         padding: 1%;
